# freja-lang

./: .gitignore  Cargo.toml  Makefile  README.md  array.js  fib.js  fib.py  index.js  package.json  test.fr  test.json  test.rs
.cargo/: config
OLD/__freja-parser/: .gitignore  Cargo.toml
OLD/__freja-parser/src/: ast.rs  lib.rs
OLD/_freja-parser/example/: main.rs
OLD/_freja-parser/src/: grammar.pest  owned.rs  parser.rs  traits.rs
OLD/_tools/: common.js  index.js  package-lock.json  package.json  template.hbs
OLD/freja-ast/: Cargo.toml
OLD/freja-ast/src/: ast.rs  ast_ext.rs
OLD/freja-evaluator/src/: function.rs  vm.rs
OLD/freja-runtime/src/: callable.rs  lib.rs  scope.rs  value.rs
_freja-parser/: Cargo.toml
_freja-parser/src/: ast.rs  lib.rs
freja/: Cargo.toml
freja-ast/src/: ast.rs  ast_ext.rs  lib.rs
freja-compiler/: Cargo.toml
freja-compiler/src/: chunk.rs  compiler.rs  compiler_state.rs  constant.rs  constants.rs  error.rs  lib.rs  utils.rs
freja-compiler/src/objects/: function.rs  mod.rs
freja-evaluator/: Cargo.toml
freja-evaluator/example/: interpreter.rs
freja-evaluator/src/: class.rs  function.rs  lib.rs  vm.rs
freja-interpreter/: Cargo.toml
freja-interpreter/example/: interpreter.rs
freja-interpreter/src/: callable.rs  env.rs  error.rs  lib.rs  vm.rs
freja-parser/: Cargo.toml  ast.json  test.rs
freja-parser/example/: ast.rs  dump.rs  parser.rs
freja-parser/src/: ast.rs  ast_ext.rs  grammar.pest  grammar.rustpeg  grammar2.pest  grammer3.pest  lexer.rs  lib.rs  parser.rs  parser2.rs
freja-parser2/: Cargo.toml  test.rs
freja-parser2/example/: ast.rs  dump.rs  parser.rs
freja-parser2/src/: ast.rs  grammar.pest  grammar.rustpeg  grammar2.rs  lexer.rs  lib.rs  parser.rs
freja-runtime/: Cargo.toml
freja-runtime/src/: callable.rs  class.rs  error.rs  function.rs  lib.rs  scope.rs  value.rs  vm.rs
freja-vm/: Cargo.toml
freja-vm/benches/: fib.rs
freja-vm/src/: _chunk.rs  _compiler.rs  _vm.rs  chunk.rs  compiler.rs  context.rs  error.rs  frames.rs  globals.rs  lib.rs  objects.rs  runner.rs  stack.rs  utils.rs  value.rs  vm.rs
freja-vm/src/objects/: array.rs  array2.rs  class.rs  closure.rs  function.rs  map.rs  mod.rs  native.rs  number.rs  objects.rs  string.rs  types.rs
freja/src/: main.rs
tests/: a.fr  array.fr  assign.fr  b.fr  block.fr  call.fr  check.fr  class.fr  fib.fr  fib2.fr  fn.fr  greeting.fr  if.fr  implements.fr  import.fr  logical.fr  numbers.fr  object.fr  pred.fr  prop.fr  relational.fr  strings.fr  super-class.fr
tests/array/: 10k.fr  1mia.fr  1mio.fr  ctor.fr  foreach.fr  len.fr
tests/class/: init.fr  methods.fr
tests/closure/: closure.fr  expr.fr
tests/loops/: c-style.fr
tests/map/: map.fr
tools/: ast.js  common.js  common2.js  index.js  package.json  template.hbs  template2.hbs  visitor.js
tools2/: ast.js  index.js  package.json  template.hbs
