[package]
name = "freja-parser2"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
pest = "^2.1"
pest_derive = "^2.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[[example]]
name = "dump"
path = "example/dump.rs"

[[example]]
name = "ast"
path = "example/ast.rs"