[package]
name = "freja-parser2"
version = "0.1.0"
authors = ["Rasmus Kildevaeld <rasmuskildevaeld@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
# peg = "~0.5"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"


[build-dependencies]
peg = { version = "~0.5" }

[[example]]
name = "parser"
path = "example/parser.rs"

[features]
default = ["serde_support"]
serde_support = ["serde"]