[package]
name = "freja-vm"
version = "0.1.0"
authors = ["Rasmus Kildevaeld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
freja-parser = { path = "../freja-parser" }
heapless = "0.4"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }

[features]
default = []
serde_support = ["serde", "freja-parser/serde"]