[package]
name = "freja-vm"
version = "0.1.0"
authors = ["Rasmus Kildevaeld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
freja-parser = { path = "../freja-parser" }
freja-compiler = { path = "../freja-compiler" }
heapless = "0.4"


[dev-dependencies]
criterion = "0.2"

# [features]
# default = []
# serde_support = ["freja-parser/serde"]

[[bench]]
name = "fib"
harness = false