[package]
name = "freja"
version = "0.1.0"
authors = ["Rasmus Kildevaeld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
freja-parser = { path = "../freja-parser" }
freja-ast = { path = "../freja-ast" }
freja-evaluator = { path = "../freja-evaluator" }
clap = "~2.33"
serde = "~1.0"
serde_json = "~1.0"