[package]
name = "freja"
version = "0.1.0"
authors = ["Rasmus Kildevaeld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
freja-parser = { path = "../freja-parser", features = ["serde_support"] }
#freja-ast = { path = "../freja-ast" }
#freja-evaluator = { path = "../freja-evaluator" }
getopts = "0.2"
serde = "~1.0"
serde_json = "~1.0"