[package]
name = "freja"
version = "0.1.0"
authors = ["Rasmus Kildevaeld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[build]
rustflags = ["-C", "target-cpu=native"]


[dependencies]
freja-vm = { path = "../freja-vm"}
freja-parser = { path = "../freja-parser" }
freja-compiler = { path = "../freja-compiler" }

#freja-ast = { path = "../freja-ast" }
#freja-evaluator = { path = "../freja-evaluator" }
getopts = "0.2"
serde = { version = "~1.0", optional = true }
serde_json = { version = "~1.0", optional = true }
serde_cbor = {  version = "~0.9" , optional = true }

[features]
default = ["serializing"]
serializing = ["freja-parser/serde_support", "serde", "serde_json", "serde_cbor"]


