[package]
name = "freja-parser"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
freja-ast = { path = "../freja-ast" }
pest = "^2.1"
pest_derive = "^2.1"

[dev-dependencies]
serde = "^1.0"
serde_json = "^1.0"

[[example]]
name = "dump"
path = "example/dump.rs"

[[example]]
name = "ast"
path = "example/ast.rs"
